--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 server.port=8081
+
+
+spring.datasource.url=jdbc:mysql://cqb90a3ewnfq7m6y:b4rmdmad7601wavt@xefi550t7t6tjn36.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/sz2c91hflpxqlmq5
+spring.datasource.username=cqb90a3ewnfq7m6y
+spring.datasource.password=b4rmdmad7601wavt
+spring.jpa.hibernate.ddl-auto=update
